# x11-touch-mouse

./: APKBUILD  Makefile.am  README  configure.ac  x11-touch-mouse.c  x11-touch-mouse.txt
.github/workflows/: makefile.yaml
